<resources>
    <string name="app_name">iNOS</string>

    <string name="time_12am">24:00</string>
    <string name="time_1am">1:00</string>
    <string name="time_2am">2:00</string>
    <string name="time_3am">3:00</string>
    <string name="time_4am">4:00</string>
    <string name="time_5am">5:00</string>
    <string name="time_6am">6:00</string>
    <string name="time_7am">7:00</string>
    <string name="time_8am">8:00</string>
    <string name="time_9am">9:00</string>
    <string name="time_10am">10:00</string>
    <string name="time_11am">11:00</string>
    <string name="time_12pm">12:00</string>
    <string name="time_1pm">13:00</string>
    <string name="time_2pm">14:00</string>
    <string name="time_3pm">15:00</string>
    <string name="time_4pm">16:00</string>
    <string name="time_5pm">17:00</string>
    <string name="time_6pm">18:00</string>
    <string name="time_7pm">19:00</string>
    <string name="time_8pm">20:00</string>
    <string name="time_9pm">21:00</string>
    <string name="time_10pm">22:00</string>
    <string name="time_11pm">23:00</string>
    <string name="create_event">Tạo sự kiện</string>
    <string name="save">Lưu</string>
    <string name="event_name">Tên sự kiện *</string>
    <string name="allday">Cả ngày</string>
    <string name="dateBegin">Date Begin</string>
    <string name="timeBegin">08:00</string>
    <string name="dateEnd">Date End</string>
    <string name="timeEnd">09:00</string>
    <string name="enterName">Nhập tên</string>
    <string name="addInfo">Thêm thông tin</string>
    <string name="newMessage">Trò chuyện mới</string>
    <string name="newGroup">Nhóm mới</string>
    <string name="newContact">Liên hệ mới</string>
    <string name="all">Tất cả</string>
    <string name="Organization1">Organization 1</string>
    <string name="Organization2">Organization 2</string>
    <string name="myContact">My contact</string>
    <string name="notifycation_off">Tắt thông báo</string>
    <string name="setting">Cài đặt</string>
    <string name="online"><![CDATA[ Trực tuyến]]></string>
    <string name="busy">Bận</string>
    <string name="absent">Vắng mặt</string>
    <string name="offline">Ngoại tuyến</string>
    <string name="settingMessage">Cài đặt messenger</string>
    <string name="notificationMessage">Thông báo trò chuyện</string>
    <string name="getNotification">Nhận thông báo khi có tin nhắn mới</string>
    <string name="interactive">Tương tác</string>
    <string name="getInteractive">Nhận thông báo đẩy khi có tương tác với tin nhắn của bạn</string>
    <string name="notificationFromSys">Thông báo từ hệ thống</string>
    <string name="title_activity_all_contact">AllContactActivity</string>
    <string name="ghimtinnhan">Ghim tin nhắn</string>
    <string name="luuanh">Lưu ảnh</string>
    <string name="xoatinnhan">Xoá tin nhắn</string>
    <string name="huy">Huỷ</string>
    <string name="chinhsua">Chỉnh sửa</string>
    <string name="trichdan">Trích dẫn</string>
    <string name="delete_sure">Bạn có chắc chắn</string>
    <string name="delete_sure_2">muốn xoá tin nhắn này không?</string>
    <string name="delete">Xoá</string>
</resources>
