<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/day_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center|bottom"
                android:textSize="22sp"
                android:text="12"
                android:paddingLeft="5dp"/>

                <TextView
                    android:id="@+id/day_number_lunar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:textSize="13sp"
                    android:text="12/10"
                    android:paddingBottom="3dp"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:id="@+id/day_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:textSize="22sp"
                android:text="Th2"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_1am"
                    android:gravity="center|bottom"
                    android:layout_marginTop="7dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_2am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_3am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_4am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_5am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_6am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_7am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_8am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_9am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_10am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_11am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_12pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_1pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_2pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_3pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_4pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_5pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_6pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_7pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_8pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_9pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_10pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_11pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_12am"
                    android:gravity="center|bottom"/>

            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>