<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_component">

        <TextView
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>


        <TextView
            android:id="@+id/monday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="11"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="12"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="13"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/thursday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="14"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/friday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="15"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/saturday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="16"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/sunday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="17"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_monday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="T2"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_tuesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="T3"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_wednesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="T4"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_thursday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="T5"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_friday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="T6"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_saturday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="T7"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <TextView
            android:id="@+id/lbl_sunday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="CN"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/days"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_1am"
                    android:gravity="center|bottom"
                    android:layout_marginTop="7dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_2am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_3am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_4am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_5am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_6am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_7am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_8am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_9am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_10am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_11am"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_12pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_1pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_2pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_3pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_4pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_5pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_6pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_7pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_8pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_9pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_10pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_11pm"
                    android:gravity="center|bottom"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/time_12am"
                    android:gravity="center|bottom"/>

            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>